fix: Using swagger.json to create API doc
