# src/controllers/authController.js
@@ -2,28 +2,7 @@ const express = require('express');
 const router = express.Router();
 const userService = require('../services/userService');
 
-/**
- * @swagger
- * /auth/login:
- *   post:
- *     summary: Login do usuário
- *     requestBody:
- *       required: true
- *       content:
- *         application/json:
- *           schema:
- *             type: object
- *             properties:
- *               email:
- *                 type: string
- *               password:
- *                 type: string
- *     responses:
- *       200:
- *         description: Token de autenticação
- *       400:
- *         description: Erro de validação ou credenciais inválidas
- */
+
 router.post('/login', (req, res) => {
   const { email, password } = req.body;
   try{
